cluster/services/paperless/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: paperless
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`docs.${DOMAIN_EXTERNAL}`)
      services:
        - kind: Service
          name: paperless
          namespace: paperless
          port: 8000
      middlewares:
        - name: auth-external
          namespace: traefik
        - name: security
          namespace: traefik
  tls:
    secretName: docs.${DOMAIN_EXTERNAL}
